Enable CORS in backend

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "testfolder",
   "version": "1.0.0",
-  "main": "index.js",
- "scripts": {
+  "main": "app.js",
+  "scripts": {
     "start": "node app.js"
-}
-,
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
